feat: 도서 이미지 기능